# cmake_test

./: .gitignore  CMakeLists.txt  LICENSE  MathFunctions.h  README.md  config.h.in  main.cpp
math/: CMakeLists.txt  MathFunctions.cpp
